--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "collectors-db",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://collectorsunite.github.io/collectors-db/",
+  "homepage": "https://collectorsunite.github.io/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
